Fix blocker bug 114675 with null check around assertion code that I meant to check in yesterday (bug 114220).